--- a/src/app/project/invite/invite.component.html
+++ b/src/app/project/invite/invite.component.html
@@ -1,3 +1,19 @@
-<p>
-  invite works!
-</p>
+<form>
+  <h3 mat-dialog-title>邀请组员：</h3>
+  <div mat-dialog-content>
+    <mat-input-container class="full-width">
+      <input matInput type="text" placeholder="组员名称" [matAutocomplete]="antoMembers">
+    </mat-input-container>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-raised-button type="button" color="primary" (click)="onClick()">保存</button>
+    <button mat-dialog-close mat-button type="button">关闭</button>
+  </div>
+</form>
+
+<mat-autocomplete #antoMembers="matAutocomplete" [displayWith]="displayUser">
+  <mat-option *ngFor="let item of items" [value]="item">
+    {{item.name}}
+  </mat-option>
+</mat-autocomplete>
+
