--- a/src/app/project/new-project/new-project.component.html
+++ b/src/app/project/new-project/new-project.component.html
@@ -7,9 +7,9 @@
     <mat-input-container class="full-width">
       <input matInput type="password" placeholder="项目描述">
     </mat-input-container>
-    <div mat-dialog-actions>
-      <button mat-raised-button type="button" color="primary">保存</button>
-      <button mat-dialog-close mat-button type="button">关闭</button>
-    </div>
+  </div>
+  <div mat-dialog-actions>
+    <button mat-raised-button type="button" color="primary" (click)="onClick()">保存</button>
+    <button mat-dialog-close mat-button type="button">关闭</button>
   </div>
 </form>
