--- a/src/app/task/task-home/task-home.component.html
+++ b/src/app/task/task-home/task-home.component.html
@@ -1,14 +1,20 @@
 <div class="task-lists">
   <app-task-list class="list-container"
+                 app-droppable
+                 [dragEnterClass]="'drag-enter'"
                  *ngFor="let list of lists">
-    <app-task-header [header]="list.name"></app-task-header>
+    <app-task-header [header]="list.name"
+                     (newTask)="handleAddTask()"
+                     (moveTask)="handleMoveTask()"
+                     (deleteTask)="handleDeleteTask()"
+                     (updateTask)="handleUpdateTaskList()"></app-task-header>
     <app-task-item [item]="task"
-                   *ngFor="let task of list.tasks">
+                   *ngFor="let task of list.tasks" (taskClick)="handleUpdateTask(task)">
 
     </app-task-item>
   </app-task-list>
 </div>
 
-<button mat-fab type="button" (click)="openNewProjectDialog()" class="fab-button">
+<button mat-fab type="button" (click)="handleNewTaskList()" class="fab-button">
   <mat-icon>add</mat-icon>
 </button>
