--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,18 +1,19 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit(form,$event)">
   <mat-card>
     <mat-card-header>
       <mat-card-title>登陆</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <mat-input-container class="full-width">
-        <input matInput type="text" placeholder="您的email">
-        <mat-hint>必填项</mat-hint>
+        <input matInput type="text" placeholder="您的email" formControlName="email">
+        <mat-error>{{form.controls['email'].errors | json}}</mat-error>
+        <!--<mat-hint>必填项</mat-hint>-->
       </mat-input-container>
       <mat-input-container class="full-width">
-        <input matInput type="password" placeholder="您的密码">
-        <mat-hint>必填项</mat-hint>
+        <input matInput type="password" placeholder="您的密码" formControlName="password">
+        <!--<mat-hint>必填项</mat-hint>-->
       </mat-input-container>
-      <button mat-raised-button type="button" color="primary">登陆</button>
+      <button mat-raised-button type="submit" color="primary" [disabled]="!form.valid">登陆</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
       <p>还没有账户？<a routerLink="/register">注册</a></p>
