--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,24 +1,31 @@
-<form>
+<form [formGroup]="form" (ngSubmit)="onSubmit(form, $event)">
   <mat-card>
     <mat-card-content>
       <mat-input-container class="full-width">
-        <input matInput type="text" placeholder="您的email">
+        <input matInput type="text" placeholder="您的email" formControlName="email">
       </mat-input-container>
       <mat-input-container class="full-width">
-        <input matInput type="text" placeholder="您的姓名">
+        <input matInput type="text" placeholder="您的姓名" formControlName="name">
       </mat-input-container>
       <mat-input-container class="full-width">
-        <input matInput type="password" placeholder="您的密码">
+        <input matInput type="password" placeholder="您的密码" formControlName="password">
       </mat-input-container>
       <mat-input-container class="full-width">
-        <input matInput type="password" placeholder="重复输入您的密码">
+        <input matInput type="password" placeholder="重复输入您的密码" formControlName="repeat">
       </mat-input-container>
-      <mat-grid-list cols="6">
+      <app-image-list-select
+        [useSvgIcon]="true"
+        [cols]="6"
+        [title]="'选择头像：'"
+        [items]="items"
+        formControlName="avatar"
+      ></app-image-list-select>
+<!--      <mat-grid-list cols="6">
         <mat-grid-tile *ngFor="let item of items">
           <mat-icon class="avatar" [svgIcon]="item"></mat-icon>
         </mat-grid-tile>
-      </mat-grid-list>
-      <button mat-raised-button type="button" color="primary">注册</button>
+      </mat-grid-list>-->
+      <button mat-raised-button type="submit" color="primary">注册</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
     </mat-card-actions>
