--- a/src/app/login/register/register.component.html
+++ b/src/app/login/register/register.component.html
@@ -1,5 +1,8 @@
 <form [formGroup]="form" (ngSubmit)="onSubmit(form, $event)">
   <mat-card>
+    <mat-card-header>
+      <mat-card-title>注册：</mat-card-title>
+    </mat-card-header>
     <mat-card-content>
       <mat-input-container class="full-width">
         <input matInput type="text" placeholder="您的email" formControlName="email">
@@ -28,6 +31,8 @@
       <button mat-raised-button type="submit" color="primary">注册</button>
     </mat-card-content>
     <mat-card-actions class="text-right">
+      <p>还没有账户？<a routerLink="/login">登陆</a></p>
+      <p>忘记密码？<a href="">找回</a></p>
     </mat-card-actions>
   </mat-card>
 </form>
