--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -25,7 +25,7 @@
   <mat-card>
     <mat-card-header>
       <mat-card-title>
-        每日佳句
+        每日佳句{{quote.id}}
       </mat-card-title>
       <mat-card-subtitle>
         {{quote.cn}}
